@@ -2,6 +2,6 @@ AUX rkt-metadata.service 242 SHA256 4e853c216abb6c6ab732a7554aa192057b70bfa67132
 AUX rkt-metadata.socket 227 SHA256 618b37860305914df77fbb0312e7ff54d9fc0c1b5b682d4cd1163fc07ec5553d SHA512 fa9044246b99161ed5903047e7b2d9c3f55d944889f263a7646d86d76ebbaf3ec86f6cd4ae2dfc5aa92169b2ac96c9dc6dbbe62ffa4437e504c539dc2b7f1600 WHIRLPOOL 3eb8f97cfb96f99b803148caa23c6882b1db6911209079a54a5aa63be27ac70adc3842be46ddca232eb547789d8b14c488fe672b56f4c3f48ec0194914cffc69
 DIST rkt-0.5.4.tar.gz 3790446 SHA256 bd49cd54cd2b57130d43fe10b5f92c5b5923fbd4aa56078558fcd1a1636cf275 SHA512 2241ebca42ceddd2e077831495655c27d57e433b3953a31ece3116c58689da36bd1dbca1b2ac8ffc46c9f94e2240b62633fd8cbfa2b2a44c0d08a29a4710398e WHIRLPOOL 4d6ef61e5f7f491e4c63d2afc820a38879211c0b5759c27a04674a49b611a2b4d523c203f624be0299ecb087ef240563dad028297d80a35fa833e0d540adf5d6
 EBUILD rkt-0.5.4.ebuild 1373 SHA256 8632d21cebd3c2d22dbcfbfe8c1f0392a55cd21cd142bbed12d4219677089260 SHA512 0862881c25b87af294c015379bfcad143cdc108b20996feb471e1adbc19f441f665cb0154641b24e0d4197418c9b874a1bf8fb76868d8b9706f57a7e10a4aecd WHIRLPOOL 078a55637f91c5fa8b7471aabb95ae51b39a2507659b0082c9e2bb5f8e0c67132a845cafb6b6e1d12fab0ef1ded03a98732fa4972e60e215048a5d4cbc7cbaae
-EBUILD rkt-9999.ebuild 1373 SHA256 8632d21cebd3c2d22dbcfbfe8c1f0392a55cd21cd142bbed12d4219677089260 SHA512 0862881c25b87af294c015379bfcad143cdc108b20996feb471e1adbc19f441f665cb0154641b24e0d4197418c9b874a1bf8fb76868d8b9706f57a7e10a4aecd WHIRLPOOL 078a55637f91c5fa8b7471aabb95ae51b39a2507659b0082c9e2bb5f8e0c67132a845cafb6b6e1d12fab0ef1ded03a98732fa4972e60e215048a5d4cbc7cbaae
-MISC ChangeLog 545 SHA256 e280d496924dfb3d1b6368a541ff10068f7123cbfa35f91856fbaea41ab8d1f7 SHA512 a33c006a6c2304fd46deb168b91da937fd95a777b7fa0980a6adab6f7f1dd4989213e8b4291e3f2831500ee28918c17fc844d470b4747218c6096e162e21f673 WHIRLPOOL 6fff32a607f33c57788326513c2fb3466cb365e29bea2230d395bee212b9fc9059b318449f9beebda1adcdb2ba747d591d2af23dda19694808ec1f396a8b2754
+EBUILD rkt-9999.ebuild 1246 SHA256 c7d31c4c3f4d7cd9219314a13e9b6e9c0594a9f4b3b103a6b1cd68b8b60ffd4a SHA512 f8bb8ec39e831aea1fc8f587c03a3cfa0fd0c198652880a4b3f6fc3a444cccda22e87d106a49e7cd79e04e0b4a25d8441e58be5fdbff39bb9003f545377b9c4a WHIRLPOOL e969b7990223317972fa55a951fe36a0612fdb564ff881a310d542cac7ceaa6e2949ab6c7dd02ca35a5bc4f0138e909d9f4ea9a10fa8949612c4355656bfe533
+MISC ChangeLog 637 SHA256 e5f48b207895167ae8dffe6ef4edf85274c6c0972ffdc047daa9dd6144bda1c8 SHA512 d7a6f0167ab060ff88b28330f2056b9906ad7adac118510ef1b2c617646875f54eb7579111deb2e4f8d17e3b3f570e154766f6826e618635621c72240dabc7b8 WHIRLPOOL 67b51531c216b66e7337ea75d445a22ad85ab1ef54acc48d81deed9934227076fad2781f50b228731746dba38a0a688647a5e119d5f9cc194be71030589e05d1
 MISC metadata.xml 596 SHA256 5f997e962d9c78f7582e9c904c36f869993e602de23d07c2ac5027de8506af2c SHA512 535822f8bf2b487331325c16eec2fc60a45fc002e45721741ffb1ab24d3117760693a5e63e535f2604aa6a084e7acbac115478b3230cde720f20eed712316fc9 WHIRLPOOL a5248eafc6fb6ff0fc9777315a51b9f4db2bf9de3d1aca50fd09c4fd83f48ddc0e2fd57fa60118263b80b1d6ab8e8283313e317d8755571a3505db4c61a14a80
